--- a/guiding_participants_section.adoc
+++ b/guiding_participants_section.adoc
@@ -5,9 +5,11 @@
 // Status: DRAFT
 // :leveloffset: +1
 
-Participation in an open source project is an interesting and somewhat amorphous place to be or describe.
-The lines for "just a user, don't talk to me about anything more" and "how can I help contribute to this project?" are clear.
-By contrast, active participation begins the moment someone cares more about the software than to just consume it, continuing until they start actively contributing toward making the software better.
+"Participation" in an open source project is an interesting—and somewhat amorphous—concept to describe.
+The line separating "I'm just a user! Don't talk to me about anything more" and "How can I help contribute to this project?" seem clear enough.
+Yet active participation in a project begins the moment someone cares enough about the software to do more than simply consume it.
+And because open source software is by nature inclusive and participatory, most *users* become *participants* rather quickly and easily—often by simply leaving a comment on the project's blog, filing an issue in the project's tracker, or engaging with the project on social media.
+By using open source software, they've *already* begun participating in the process of making the software better.
 
 Here are some examples of various types of participation:
 
