--- a/getting_started_section.adoc
+++ b/getting_started_section.adoc
@@ -3,7 +3,7 @@
 // Updated: 2020-12-04
 // Version: 2.0
 // Status: DRAFT
-// :leveloffset: +1
+:leveloffset: +1
 
 Wherever you are in your journey as an open source practitioner, it is always useful to understand and pay attention to the basics.
 These basics include some of the types of _common knowledge_ that "everyone knows in the community", yet no one is sure how they learned it, and it's not always written down.
@@ -24,6 +24,9 @@ This section is useful for you if:
 * You like to read things from the beginning.
 
 include::community_101.adoc[]
-include::new_project_start_up_checklist.adoc[]
-include::terminology_and_lexicon.adoc[]
 
+include::new_project_start_up_checklist.adoc[]
+
+//include::terminology_and_lexicon.adoc[]
+
+:leveloffset: -1
