--- a/creating_a_culture_of_mentorship.adoc
+++ b/creating_a_culture_of_mentorship.adoc
@@ -21,14 +21,16 @@ It's universal insofar as it has potential to be a positive experience for anyon
 
 Therefore, one way of thinking of mentorship is the following:
 
-> Mentorship is an action, experience, and opportunity to share what you can, when you can, how you can.
+> Mentorship is an act, experience, and opportunity to share what you can, when you can, how you can.
 
 Mentorship is important.
-It helps you, it helps others, it helps the community, and it helps the project.
+It helps you, it helps others, it helps the community, and it helps the open source project.
 
 === It helps you
 
-The help you give has valuable and lasting benefits.
+Mentoring can be a personally rewarding experience.
+The help and guidance you offer can have valuable, lasting benefits.
+For example:
 
 - experience the positive emotions of giving back
 - learn more about yourself
@@ -40,24 +42,25 @@ The help you give has valuable and lasting benefits.
 
 === It helps others
 
-Mentorship helps folks navigating the different stages/circumstances in their life.
+Mentorship helps contributors navigating different stages of their careers or different life circumstances.
+Mentorship has the potential for positive impact (big and small, yet valuable just the same), whether it occurs among people in a specific project of initiative, in general as people get started with the project, and as people grow and advance in their educations and careers. 
 
-Whether it is with a specific project/initiative or as they start, grow and advance in their education/career or generally picking up new skillsets, mentorship has the potential for positive impact (big and small, yet valuable).
+=== It helps the community
 
-=== It helps community
-
-It starts with helping one person, who in turn helps someone else and the positive ripple effect continues. It can even be similar to a boomerang of help that returns to you.
+Mentoriship has a cumulative effect on community coherence and identity.
+It might begin between two people, when one person mentors another. But that person may mentor someone else in turn—and the positive ripple effect continues.
+It might even become a sort of "boomerang of help" that returns to you when you need a helping hand or some advice.
 
 At scale, it helps contribute towards more inclusive, collaborative, helpful, and innovative communities.
 
 === It helps the project
 
-Mentorship in open source projects is important and valuable.
-In the sections below are additional details on its context and benefits.
+Creating a culture of mentorship—or even a sopecific mentoring program—is important and valuable to the long-term health of an open source project.
+The rest of this chapter will discuss those benefits specifically.
 
 == Forms and styles of mentorship
 
-As mentioned earlier, one can think of mentorship as an action, experience, and opportunity to share what you can, when you can, how you can.
+Recall that mentorship is an act, experience, and opportunity to share what you can, when you can, how you can.
 
 In an open source project, this can manifest in various ways.
 It can be informal, formal, peer-to-peer, mentor-to-mentee, and other variants.
