Finishing the Community 101 chapter. - Merging in Dave Neary's content from getting_organized - Converting the FAQ to normal sub-sections - Adding material about why you would want to start a new project; this is not exhaustive but good enough for 2.0.
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/getting_organized.adoc
+++ b/getting_organized.adoc
@@ -1,3 +1,8 @@
+////
+Content merged into community_101.adoc
+Leaving for now, can clean up in the future.
+////
+
 = Getting Organized
 Authors: Dave Neary <dneary@redhat.com>
 Updated: 2020-02-04
