Good-enough content for 2.0.
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/what_is_a_contribution.adoc
+++ b/what_is_a_contribution.adoc
@@ -1,19 +1,55 @@
 = What Is a Contribution?
-Authors:
-Updated:
+// Authors:
+// Updated:
 
-== Introduction
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Suspendisse viverra id leo et lacinia.
-Maecenas convallis lacinia diam, et lobortis quam tincidunt hendrerit.
-Mauris eget nulla at dolor ullamcorper lacinia.
-Quisque nisl eros, hendrerit et erat sit amet, feugiat venenatis sapien.
-Duis a dapibus mauris.
-Aliquam tempus ornare metus nec accumsan.
-Nulla et dui arcu.
-Proin hendrerit nibh velit, quis aliquet est interdum sit amet.
-Pellentesque vitae turpis tempor ex pulvinar sodales ut vitae arcu.
-Nunc commodo dolor quis porttitor imperdiet.
-Ut imperdiet egestas diam nec pretium.
-Vivamus non ligula viverra, egestas dolor consequat, pretium nisi.
-Nulla non leo pellentesque.
+There is a common misunderstanding that only code and possibly documentation are a "true" contribution to an open source project.
+This terrible idea has a name that deserves to stay a part of history, "code is king."
+Let's have no more of that.
+
+In truth, there are exponentially more ways to contribute than just those two ways.
+And exponentially more value for the project and the diverse group of contributors making those contributions.
+
+An open source Contribution::
+Any original, intentional, and substantive object given freely to an open source community, under the licensing of that community.
+A contribution can come from an individual or a community.
+
+An open source Contributor::
+Any individual person involved in making Contributions to the community.
+Communities are interpersonal by their nature.
+They consist of humans, not organizations.
+Organizations can send their members, staff, leaders, and so forth out to make contributions to a community as a contributor
+
+Examples of specific contributions (objects):
+* An idea.
+* A design suggestion.
+* Creating or improving a process.
+* Performing any sustained effort.
+* A piece of content, such as a document, release announcement, interview, how-to article, operations page, and so forth.
+* Code, a type of content that instructs machines to do things, regardless of the type of code.
+* Physical materials, such as servers or contributor gifts.
+* Monetary, where possible and welcome.
+(This is not always an easy or even possible way to contribute to many open source projects.)
+* Being a moderator on a forum.
+* Helping at an event
+* Being the manager for a release.
+* A website design.
+* An automation script.
+* A test suite.
+* Testing and bug reporting.
+* Build a relationship with between two projects.
+* Write a marketing plan.
+* Creating a roadmap.
+* Performing project management (PM) skills for an effort in the community.
+* Doing quantitative or qualitative analysis.
+* Creating a logo.
+* Establishing a project's Code of Conduct.
+* Helping the project with legal considerations.
+* Building a contributor/maintainer/leader recruiting process.
+* And so forth.
+
+Practically any skill you might learn in a job role, from customer service to product management, can underly a contribution.
+Any need you can imagine another community having, might be a need of an open source community and can form the basis of a contribution.
+
+It is useful to be mindful of the breadth and depth of types of contributions.
+As part of the practice of community management, you will have to be aware of the many ways people contribute to a project.
+Then you can thank them for their contribution, connecting their action from the individual back to the whole and the greater effort.
