--- a/creating_a_culture_of_mentorship.adoc
+++ b/creating_a_culture_of_mentorship.adoc
@@ -263,7 +263,7 @@ This gives them guided experience, while showing up any places where documentati
 === Help them with visibility
 
 Ironically for the most public-facing people in a project, people in community roles can see their careers suffer for lack of visibility.
-More than one person spoken to mentioned seeing colleagues have their career suffer because their management chain was unaware of the work they were doing, or did not understand its value.
+More than one person mentioned seeing their careers suffer because their management chain was unaware of the work they were doing, or did not understand its value.
 
 As the experienced community manager, one of the best gifts you can offer a junior community person is being a credible cheerleader for their work.
 
