Including these piece that was outside of the OUTLINE - Originally @nearyd piece
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/getting_started_section.adoc
+++ b/getting_started_section.adoc
@@ -27,6 +27,8 @@ include::community_101.adoc[]
 
 include::new_project_start_up_checklist.adoc[]
 
+include::creating_a_product_strategy.adoc[]
+
 //include::terminology_and_lexicon.adoc[]
 
 :leveloffset: -1
